# uvg

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  deny.toml
.github/workflows/: ci.yml  matrix.yml  release.yml  security.yml  stackoverflow-drift.yml
docs/: beta-validation.md  design.md  module-size-report.md  operations-security.md  philosophy.md  release.md  tech-specs.md
docs/validation/: pagila-v1.7.0-rc.1.md
scripts/: beta_validate_schema.sh  module_size_report.py
src/: apply.rs  apply_progress.rs  apply_progress_tests.rs  cli.rs  cli_tests.rs  connection.rs  db.rs  db_tests.rs  dialect.rs  error.rs  init.rs  init_tests.rs  lib.rs  main.rs  main_tests.rs  migrations.rs  naming.rs  naming_tests.rs  output.rs  output_tests.rs  profile.rs  profile_tests.rs  redaction.rs  redaction_tests.rs  risk_classify.rs  risk_classify_tests.rs  schema.rs  snapshot.rs  snapshot_tests.rs  table_filter.rs  table_filter_tests.rs  testutil.rs  typemap.rs
src/codegen/: ddl.rs  ddl_diff.rs  ddl_diff_tests.rs  ddl_tests.rs  declarative.rs  declarative_tests.rs  graph.rs  imports.rs  imports_tests.rs  mod.rs  python.rs  relationships.rs  render.rs  schema_info.rs  sql_text.rs  tables.rs  tables_tests.rs  tests.rs
src/ddl_typemap/: mod.rs  mssql.rs  mssql_tests.rs  mysql.rs  mysql_tests.rs  pg.rs  pg_tests.rs  sqlite.rs  sqlite_tests.rs  tests.rs
src/introspect/: grouping.rs  grouping_tests.rs  mod.rs  tests.rs
src/migrations/: apply.rs  commands.rs  files.rs  graph.rs  mod.rs  model.rs  render.rs  reverse.rs  tests.rs  version_table.rs
src/tui/: actions.rs  app.rs  events.rs  mod.rs  render.rs  tests.rs
src/typemap/: canonical_sa.rs  mod.rs  mssql.rs  mssql_tests.rs  mysql.rs  mysql_tests.rs  pg.rs  pg_tests.rs  sqlite.rs  sqlite_tests.rs
testdata/crm/: README.md  crm_mssql.sql  crm_mysql.sql  crm_postgres.sql  run_matrix.sh  (+2 more)
tests/: apply.rs  apply_shared.rs  filters.rs  integration.rs  introspect.rs  migrations.rs  output_layout.rs  profile.rs  risk_classify.rs  snapshot.rs
(+63 files in other folders)
