[package]
name = "uvg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uvg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
heck = "0.5"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio-util = { version = "0.7", features = ["compat"] }
percent-encoding = "2"
url = "2"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
