[package]
name = "uvg"
version = "1.4.0"
edition = "2021"
rust-version = "1.82"
authors = ["John Dauphine <jdauphine@gmail.com>"]
description = "A fast Rust reimplementation of sqlacodegen: introspect PostgreSQL, MySQL, SQLite, or MSSQL schemas and generate SQLAlchemy models or cross-dialect DDL migrations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/johndauphine/uvg"
homepage = "https://github.com/johndauphine/uvg"
readme = "README.md"
keywords = ["sqlalchemy", "codegen", "postgres", "mysql", "cli"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "uvg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
heck = "0.5"
tiberius = { version = "0.12", default-features = false, features = ["rustls", "tds73"] }
tokio-util = { version = "0.7", features = ["compat"] }
percent-encoding = "2"
url = "2"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
indoc = "2"
